Update blogview with both absolute and relative paths for posts and images
Upde blogview with path getters. Update Sightly templates that use paths.
Update pom file with OSGi wrapper of jsoup dependency. Update comment
servlet to not check recaptcha if recaptcha isn't enabled.